plugins {
	id 'java'
	id 'org.springframework.boot' version '3.0.5'
	id 'io.spring.dependency-management' version '1.1.0'
	id 'org.hibernate.orm' version '6.1.7.Final'
	id 'org.graalvm.buildtools.native' version '0.9.20'
}

group = 'com.posmosalimos'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'javax.xml.bind:jaxb-api:2.3.0'
//	implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.4.1'
	implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.7.0'
//    implementation 'org.springframework.boot:spring-boot-starter-security'
    runtimeOnly 'com.mysql:mysql-connector-j'

	//메일 인증
	implementation 'org.springframework.boot:spring-boot-starter-mail'

	//security
//	implementation 'org.springframework.boot:spring-boot-starter-security'
//	implementation group: 'org.javassist', name: 'javassist', version: '3.15.0-GA'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	//jwt
	implementation 'io.jsonwebtoken:jjwt:0.9.1'

	// spring cloud openfeign
	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'

	// jasypt
	implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.4'

	implementation platform('org.springframework.cloud:spring-cloud-dependencies:2020.0.2')

}

tasks.named('test') {
	useJUnitPlatform()
}

hibernate {
	enhancement {
		lazyInitialization true
		dirtyTracking true
		associationManagement true
	}
}

//bootJar { //jar
//	archiveBaseName = '-'
//	archiveFileName = "geulgwi.jar"
//	archiveVersion = '0.0.0'
//}

